EWC-11 : Upgrade Kitchensink

--- a/examples/ext-web-components-kitchensink/src/index.html
+++ b/examples/ext-web-components-kitchensink/src/index.html
@@ -7,7 +7,7 @@
   <title>ExtWebComponents 7.4 Kitchen Sink</title>
   <script src="modern.engine.enterprise.js"></script>
 
-  <script>
+  <!-- <script>
     function isIE11() {
       return !!window.MSInputMethodContext && !!document.documentMode;
     }
@@ -26,7 +26,8 @@
     } else {
       addWebComponents();
     }
-  </script>
+  </script> -->
+  <link href="./material/material-all.css" rel="stylesheet" /> 
   <link href="./kitchensink-theme/resources/Theme.kitchensink-all.css" rel="stylesheet" /> 
   <script src="./resources/code.js"></script>
   <link rel="icon" type="image/x-icon" href="./resources/favicon.ico">
