KitchenSink examples issues fix

--- a/examples/ext-angular-kitchensink/src/examples/grids/add_ons/GridFilterbar/GridFilterbar.html
+++ b/examples/ext-angular-kitchensink/src/examples/grids/add_ons/GridFilterbar/GridFilterbar.html
@@ -17,6 +17,7 @@
     grouped="true"
     shadow="true"
     rowNumbers="true"
+    emptyText="No Matching Records"
     [titleBar]="gridTitleBar"
     [plugins]="{ gridfilterbar: true }"
     (ready)="gridReady($event)"
