--- a/examples/ext-web-components-kitchensink/src/index.html
+++ b/examples/ext-web-components-kitchensink/src/index.html
@@ -7,14 +7,14 @@
   <title>ExtWebComponents 7.4 Kitchen Sink</title>
   <script src="modern.engine.enterprise.js"></script>
 
-  <!-- <script>
+  <script>
     function isIE11() {
       return !!window.MSInputMethodContext && !!document.documentMode;
     }
 
     function addWebComponents() {
       var scriptTemp2 = document.createElement( 'script' );
-      scriptTemp2.setAttribute( 'src','ext-web-components-modern.js' );//'webcomponents-bundle.js' );
+      scriptTemp2.setAttribute( 'src','webcomponents-bundle.js' );
       document.head.appendChild(scriptTemp2);
     }
 
@@ -26,7 +26,7 @@
     } else {
       addWebComponents();
     }
-  </script> -->
+  </script>
   <link href="./material/material-all.css" rel="stylesheet" /> 
   <link href="./kitchensink-theme/resources/Theme.kitchensink-all.css" rel="stylesheet" /> 
   <script src="./resources/code.js"></script>
